<resources>
    <string name="app_name">Student Central</string>
    <string name="login">Login</string>
    <string name="createAccount"><u>create an account</u></string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="need">Need to create an account?</string>
    <string name="app_description">App Icon</string>


    <string name="register_userName">Username</string>
    <string name="register_studentEmail">Student Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirmPassword">Confirm Password</string>
    <string name="register_register">Register</string>
    <string name="app_icon">App Icon</string>
    <string name="nav_bar_background">Nav Bar Background</string>
    <string name="add_class_button">Add Class Button</string>
    <string name="add_question_button">Add Question Button</string>
    <string name="notification_active_icon">Notification Active Icon</string>
    <string name="nc_southwick_407">NC Southwick 407</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="notification_bell_nav_bar">Notification Bell Nav Bar</string>
    <string name="class_card_background">Class Card Background</string>
    <string name="comp_3090">COMP 3090</string>
    <string name="_2_00_3_15">2:00-3:15</string>
    <string name="today">Today</string>
    <string name="_18">18</string>
    <string name="home">Home</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="mwf">MWF</string>
    <string name="question_bg">question_bg</string>
    <string name="john_doe">John Doe</string>
    <string name="question_title">Question Title</string>
    <string name="_2_comments">2 comments</string>
    <string name="userlogo">userLogo</string>
    <string name="commentcloud">commentCloud</string>
    <string name="comments"> comments</string>

    <!-- Strings related to errors -->
    <string name="auth_failed">Authorization failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">Passwords do not match</string>
    <string name="error_password_length">Password should be at least 6 letters</string>

    <!-- ActionBar strings -->
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Reset Password -->
    <string name="forgot_password_msg">We need your registered email Id to send you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="post">POST</string>
    <string name="textview">TextView</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="posted_by_braulio_yahoo_com">Posted by: braulio@yahoo.com</string>
    <string name="hhw6">Help with homework 6</string>
    <string name="answers">Answers</string>
    <string name="add_an_answer">\t\tAdd an answer</string>
    <string name="line">line</string>
    <string name="add_answer">Add answer</string>
    <string name="your_question">Your question</string>
    <string name="laura_yahoo_com">Laura@yahoo.com</string>
    <string name="smallLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue neque gravida in fermentum et sollicitudin ac orci. Sed tempus urna et pharetra. Ultricies mi quis hendrerit dolor magna eget. Enim praesent elementum facilisis leo vel.</string>
    <string name="ask_question">Ask Question</string>
    <string name="class_name">Class Name</string>
    <string name="email">Email</string>
</resources>
