<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imvQuestionBG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/question_bg"
        android:scaleX="1.2"
        app:srcCompat="@drawable/ic_questionsbg" />

    <ImageView
        android:id="@+id/imvUserLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/userlogo"
        android:scaleX=".6"
        android:scaleY=".6"
        app:srcCompat="@drawable/userlogo" />

    <TextView
        android:id="@+id/txvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="6dp"
        android:text="@string/john_doe"
        android:textColor="@color/colorBlueText" />

    <TextView
        android:id="@+id/txvQuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="25dp"
        android:text="@string/question_title"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/clouldLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="82dp"
        android:contentDescription="@string/commentcloud"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:srcCompat="@drawable/ic_cloud" />

    <TextView
        android:id="@+id/txvCommentNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvQuestionTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_2_comments"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>