<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".PostReplyActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView333"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginTop="-5dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/nav_bar_background"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_navbarbg" />

        <ImageButton
            android:id="@+id/imageButton222"
            android:layout_width="54dp"
            android:layout_height="56dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/menu_icon"
            android:onClick="onXClick"
            app:srcCompat="@drawable/ic_x" />

        <TextView
            android:id="@+id/txvAddAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_answer"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/postAnswerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/notification_bell_nav_bar"
            android:onClick="onPostAnswerClick"
            android:text="@string/post"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edtQuestionTitlePQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="16dp"
            android:text="@string/hhw6"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/greyline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/line"
            android:scaleType="fitCenter"
            android:scaleX="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtQuestionTitlePQ"
            app:srcCompat="@drawable/ic_greyline" />

        <EditText
            android:id="@+id/txeAnswer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="top"
            android:hint="Your answer"
            android:inputType="textLongMessage|textMultiLine"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greyline44"
            tools:targetApi="o" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>