<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationView4"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="501dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageViewnav4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/nav_bar_background"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_navbarbg" />

        <ImageButton
            android:id="@+id/imageButtonnav3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_navbarmenu" />

        <TextView
            android:id="@+id/textViewnav5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/comp_3090"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonnav1"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/imageButtonnav3"
            app:layout_constraintTop_toTopOf="@+id/imageViewnav4" />

        <ImageButton
            android:id="@+id/imageButtonnav1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/notification_bell_nav_bar"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewnav4"
            app:layout_constraintEnd_toEndOf="@+id/imageViewnav4"
            app:layout_constraintTop_toTopOf="@+id/imageViewnav4"
            app:srcCompat="@drawable/ic_alerts" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/questionsPageListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView4">

    </ListView>

    <ImageButton
        android:id="@+id/addQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTransparent"
        android:contentDescription="@string/add_class_button"
        android:onClick="addClassesButtonListener"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/ic_addbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>